# tui-rain

./: 2024-spl-greetings.md  CHANGELOG.md  Cargo.toml  README.md  justfile  rustfmt.toml
src/: args.rs  lib.rs  main.rs  utils.rs
