[package]
name = "tui-rain-cli"
version = "0.2.0"
edition = "2021"
authors = ["tschinz"]
categories = ["cli", "command-line-utilities"]
keywords = ["cli", "terminal", "rain", "effect"]

[dependencies]
clap = { version = "4.5.23", features = ["env", "derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
rand = "0.8.5"
rand_pcg = "0.3.1"
ratatui = "0.29.0"
tokio = { version = "1.41.1", features = ["full"] }
